tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@break_in_filter_section.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/break_in_filter_section.txt
---
error: `break` cannot be used inside a filter section, `set` block or component body
 --> break_in_filter_section.txt:1:47
  |
1 | {% for i in [1,2] %}{% filter upper %}{{i}}{% break %}{% endfilter %}{% endfor %}
  |                                               ^^^^^
